goit-markup-hw-07

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,12 +68,14 @@
               </button>
               <ul class="header-wrap-list list">
                 <li class="header-wrap-item">
-                  <a class="header-wrap-link link current" href="./index.html"
+                  <a class="header-wrap-link link" href="./index.html"
                     >Studio</a
                   >
                 </li>
                 <li class="header-wrap-item">
-                  <a class="header-wrap-link link" href="./portfolio.html"
+                  <a
+                    class="header-wrap-link link current"
+                    href="./portfolio.html"
                     >Portfolio</a
                   >
                 </li>
@@ -155,12 +157,35 @@
             <li class="about-item">
               <a href="#" class="about-icon link"
                 ><div class="about-icon-wrap">
-                  <img
-                    src="./images/bankapp.jpg"
-                    alt="banking app design"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 320px)"
+                      srcset="
+                        ./images/bankappph.jpg    1x,
+                        ./images/bankappph@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/bankapptb.jpg    1x,
+                        ./images/bankapptb@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/bankapp.jpg    1x,
+                        ./images/bankapp@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      src="./images/bankapp.jpg"
+                      alt="banking app design"
+                      width="360"
+                      height="300"
+                    />
+                  </picture>
                   <p class="about-wrap">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -176,12 +201,32 @@
             <li class="about-item">
               <a href="#" class="about-icon link">
                 <div class="about-icon-wrap">
-                  <img
-                    src="./images/phone.jpg"
-                    alt="scanning a QR code"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 320px)"
+                      srcset="
+                        ./images/phoneph.jpg    1x,
+                        ./images/phoneph@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/phonetb.jpg    1x,
+                        ./images/phonetb@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="./images/phone.jpg 1x, ./images/phone@2x.jpg 2x"
+                    />
+                    <img
+                      src="./images/phone.jpg"
+                      alt="scanning a QR code"
+                      width="360"
+                      height="300"
+                    />
+                  </picture>
                   <p class="about-wrap">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -197,12 +242,35 @@
             <li class="about-item">
               <a href="#" class="about-icon link">
                 <div class="about-icon-wrap">
-                  <img
-                    src="./images/gadgets.jpg"
-                    alt="website open on laptop and phone"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 480px)"
+                      srcset="
+                        ./images/gadgetsph.jpg    1x,
+                        ./images/gadgetsph@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/gadgetstb.jpg    1x,
+                        ./images/gadgetstb@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/gadgets.jpg    1x,
+                        ./images/gadgets@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      src="./images/gadgets.jpg"
+                      alt="website open on laptop and phone"
+                      width="360"
+                      height="300"
+                    />
+                  </picture>
                   <p class="about-wrap">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -218,12 +286,35 @@
             <li class="about-item link">
               <a href="#" class="about-icon link"
                 ><div class="about-icon-wrap">
-                  <img
-                    src="./images/machine.jpg"
-                    alt="driver's seat in the car"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 320px)"
+                      srcset="
+                        ./images/machineph.jpg    1x,
+                        ./images/machineph@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/machinetb.jpg    1x,
+                        ./images/machinetb@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/machine.jpg    1x,
+                        ./images/machine@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      src="./images/machine.jpg"
+                      alt="driver's seat in the car"
+                      width="360"
+                      height="300"
+                    />
+                  </picture>
                   <p class="about-wrap">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -239,12 +330,35 @@
             <li class="about-item">
               <a href="#" class="about-icon link"
                 ><div class="about-icon-wrap">
-                  <img
-                    src="./images/wallpaper.jpg"
-                    alt="phone wallpaper"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 320px)"
+                      srcset="
+                        ./images/wallpaperph.jpg    1x,
+                        ./images/wallpaperph@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/wallpapertb.jpg    1x,
+                        ./images/wallpapertb@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/wallpaper.jpg    1x,
+                        ./images/wallpaper@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      src="./images/wallpaper.jpg"
+                      alt="phone wallpaper"
+                      width="360"
+                      height="300"
+                    />
+                  </picture>
                   <p class="about-wrap">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -260,12 +374,26 @@
             <li class="about-item">
               <a href="#" class="about-icon link"
                 ><div class="about-icon-wrap">
-                  <img
-                    src="./images/girl.jpg"
-                    alt="happy girl in headphones"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 320px)"
+                      srcset="./images/girlph.jpg 1x, ./images/girlph@2x.jpg 2x"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="./images/girltb.jpg 1x, ./images/girltb@2x.jpg 2x"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="./images/girl.jpg 1x, ./images/girl@2x.jpg 2x"
+                    />
+                    <img
+                      src="./images/girl.jpg"
+                      alt="happy girl in headphones"
+                      width="360"
+                      height="300"
+                    />
+                  </picture>
                   <p class="about-wrap">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -281,12 +409,32 @@
             <li class="about-item">
               <a href="#" class="about-icon link"
                 ><div class="about-icon-wrap">
-                  <img
-                    src="./images/maket.jpg"
-                    alt="instagram ad layout"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 320px)"
+                      srcset="
+                        ./images/maketph.jpg    1x,
+                        ./images/maketph@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/makettb.jpg    1x,
+                        ./images/makettb@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="./images/maket.jpg 1x, ./images/maket@2x.jpg 2x"
+                    />
+                    <img
+                      src="./images/maket.jpg"
+                      alt="instagram ad layout"
+                      width="360"
+                      height="300"
+                    />
+                  </picture>
                   <p class="about-wrap link">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -302,12 +450,32 @@
             <li class="about-item">
               <a href="#" class="about-icon link"
                 ><div class="about-icon-wrap">
-                  <img
-                    src="./images/avoska.jpg"
-                    alt="grocery bag"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 320px)"
+                      srcset="
+                        ./images/avoskaph.jpg    1x,
+                        ./images/avoskaph@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/avoskatb.jpg    1x,
+                        ./images/avoskatb@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="./images/avoska.jpg 1x, ./images/avoska@2x.jpg 2x"
+                    />
+                    <img
+                      src="./images/avoska.jpg"
+                      alt="grocery bag"
+                      width="360"
+                      height="300"
+                    />
+                  </picture>
                   <p class="about-wrap link">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -323,12 +491,26 @@
             <li class="about-item">
               <a href="#" class="about-icon link"
                 ><div class="about-icon-wrap">
-                  <img
-                    src="./images/coffe.jpg"
-                    alt="making coffee with milk"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 320px)"
+                      srcset="/images/coffeph.jpg 1x, /images/coffeph@2x.jpg 2x"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="/images/coffetb.jpg 1x, /images/coffetb@2x.jpg 2x"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="/images/coffe.jpg 1x, /images/coffe@2x.jpg 2x"
+                    />
+                    <img
+                      src="./images/coffe.jpg"
+                      alt="making coffee with milk"
+                      width="360"
+                      height="300"
+                    />
+                  </picture>
                   <p class="about-wrap link">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -406,5 +588,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
