--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <ul class="item-list list">
             <li class="item-pic">
               <img
-                srcset="./images/rectangle1@2x.jpg"
+                srcset="./images/rectangle1@2x.jpg 2x"
                 src="./images/rectangle1.jpg"
                 alt="Computer"
                 width="360"
@@ -212,7 +212,7 @@
             </li>
             <li class="item-pic">
               <img
-                srcset="./images/rectangle2@2x.jpg"
+                srcset="./images/rectangle2@2x.jpg 2x"
                 src="./images/rectangle2.jpg"
                 alt="Social Network"
                 width="360"
@@ -221,7 +221,7 @@
             </li>
             <li class="item-pic">
               <img
-                srcset="./images/rectangle3@2x.jpg"
+                srcset="./images/rectangle3@2x.jpg 2x"
                 src="./images/rectangle3.jpg"
                 alt="Telephone"
                 width="360"
@@ -238,7 +238,7 @@
           <ul class="comand-list list">
             <li class="comand-item">
               <img
-                srcset="./images/markguerrero@2x.jpg"
+                srcset="./images/markguerrero@2x.jpg 2x"
                 src="./images/markguerrero.jpg"
                 alt="Member of our team Mark Guerrero"
                 width="264"
@@ -287,7 +287,7 @@
             </li>
             <li class="comand-item">
               <img
-                srcset="./images/tomford@2x.jpg"
+                srcset="./images/tomford@2x.jpg 2x"
                 src="./images/tomford.jpg"
                 alt="Member of our team Tom Ford"
                 width="264"
@@ -336,7 +336,7 @@
             </li>
             <li class="comand-item">
               <img
-                srcset="./images/camilagarcia@2x.jpg"
+                srcset="./images/camilagarcia@2x.jpg 2x"
                 src="./images/camilagarcia.jpg"
                 alt="Member of our team Camila Garcia"
                 width="264"
@@ -386,7 +386,7 @@
             </li>
             <li class="comand-item">
               <img
-                srcset="./images/danielwilson@2x.jpg"
+                srcset="./images/danielwilson@2x.jpg 2x"
                 src="./images/danielwilson.jpg"
                 alt="Member of our team Daniel Wilson"
                 width="264"
