goit-markup-hw-07

--- a/portfolio.html
+++ b/portfolio.html
@@ -496,15 +496,21 @@
                   <picture>
                     <source
                       media="(min-width: 320px)"
-                      srcset="/images/coffeph.jpg 1x, /images/coffeph@2x.jpg 2x"
+                      srcset="
+                        ./images/coffeph.jpg    1x,
+                        ./images/coffeph@2x.jpg 2x
+                      "
                     />
                     <source
                       media="(min-width: 768px)"
-                      srcset="/images/coffetb.jpg 1x, /images/coffetb@2x.jpg 2x"
+                      srcset="
+                        ./images/coffetb.jpg    1x,
+                        ./images/coffetb@2x.jpg 2x
+                      "
                     />
                     <source
                       media="(min-width: 1200px)"
-                      srcset="/images/coffe.jpg 1x, /images/coffe@2x.jpg 2x"
+                      srcset="./images/coffe.jpg 1x, ./images/coffe@2x.jpg 2x"
                     />
                     <img
                       src="./images/coffe.jpg"
