--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </svg>
         </button>
         <div class="header-wrap is-hidden" data-menu>
-          <div class="container">
+          <div class="content">
             <div class="mob-menu-top">
               <button type="button" class="header-btn-close" data-menu-close>
                 <svg class="header-btn-icon-close" width="8" height="8">
