--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
           </svg>
         </button>
         <div class="header-wrap is-hidden" data-menu>
-          <div class="container">
+          <div class="content">
             <div class="mob-menu-top">
               <button type="button" class="header-btn-close" data-menu-close>
                 <svg class="header-btn-icon-close" width="8" height="8">
@@ -161,10 +161,10 @@
                 ><div class="about-icon-wrap">
                   <picture>
                     <source
-                      media="(min-width: 320px)"
+                      media="(min-width: 1200px)"
                       srcset="
-                        ./images/bankappph.jpg    1x,
-                        ./images/bankappph@2x.jpg 2x
+                        ./images/bankapp.jpg    1x,
+                        ./images/bankapp@2x.jpg 2x
                       "
                     />
                     <source
@@ -175,10 +175,10 @@
                       "
                     />
                     <source
-                      media="(min-width: 1200px)"
+                      media="(min-width: 320px)"
                       srcset="
-                        ./images/bankapp.jpg    1x,
-                        ./images/bankapp@2x.jpg 2x
+                        ./images/bankappph.jpg    1x,
+                        ./images/bankappph@2x.jpg 2x
                       "
                     />
                     <img
@@ -205,11 +205,8 @@
                 <div class="about-icon-wrap">
                   <picture>
                     <source
-                      media="(min-width: 320px)"
-                      srcset="
-                        ./images/phoneph.jpg    1x,
-                        ./images/phoneph@2x.jpg 2x
-                      "
+                      media="(min-width: 1200px)"
+                      srcset="./images/phone.jpg 1x, ./images/phone@2x.jpg 2x"
                     />
                     <source
                       media="(min-width: 768px)"
@@ -219,8 +216,11 @@
                       "
                     />
                     <source
-                      media="(min-width: 1200px)"
-                      srcset="./images/phone.jpg 1x, ./images/phone@2x.jpg 2x"
+                      media="(min-width: 320px)"
+                      srcset="
+                        ./images/phoneph.jpg    1x,
+                        ./images/phoneph@2x.jpg 2x
+                      "
                     />
                     <img
                       src="./images/phone.jpg"
@@ -246,10 +246,10 @@
                 <div class="about-icon-wrap">
                   <picture>
                     <source
-                      media="(min-width: 480px)"
+                      media="(min-width: 1200px)"
                       srcset="
-                        ./images/gadgetsph.jpg    1x,
-                        ./images/gadgetsph@2x.jpg 2x
+                        ./images/gadgets.jpg    1x,
+                        ./images/gadgets@2x.jpg 2x
                       "
                     />
                     <source
@@ -260,10 +260,10 @@
                       "
                     />
                     <source
-                      media="(min-width: 1200px)"
+                      media="(min-width: 320px)"
                       srcset="
-                        ./images/gadgets.jpg    1x,
-                        ./images/gadgets@2x.jpg 2x
+                        ./images/gadgetsph.jpg    1x,
+                        ./images/gadgetsph@2x.jpg 2x
                       "
                     />
                     <img
@@ -290,10 +290,10 @@
                 ><div class="about-icon-wrap">
                   <picture>
                     <source
-                      media="(min-width: 320px)"
+                      media="(min-width: 1200px)"
                       srcset="
-                        ./images/machineph.jpg    1x,
-                        ./images/machineph@2x.jpg 2x
+                        ./images/machine.jpg    1x,
+                        ./images/machine@2x.jpg 2x
                       "
                     />
                     <source
@@ -304,10 +304,10 @@
                       "
                     />
                     <source
-                      media="(min-width: 1200px)"
+                      media="(min-width: 320px)"
                       srcset="
-                        ./images/machine.jpg    1x,
-                        ./images/machine@2x.jpg 2x
+                        ./images/machineph.jpg    1x,
+                        ./images/machineph@2x.jpg 2x
                       "
                     />
                     <img
@@ -334,10 +334,10 @@
                 ><div class="about-icon-wrap">
                   <picture>
                     <source
-                      media="(min-width: 320px)"
+                      media="(min-width: 1200px)"
                       srcset="
-                        ./images/wallpaperph.jpg    1x,
-                        ./images/wallpaperph@2x.jpg 2x
+                        ./images/wallpaper.jpg    1x,
+                        ./images/wallpaper@2x.jpg 2x
                       "
                     />
                     <source
@@ -348,10 +348,10 @@
                       "
                     />
                     <source
-                      media="(min-width: 1200px)"
+                      media="(min-width: 320px)"
                       srcset="
-                        ./images/wallpaper.jpg    1x,
-                        ./images/wallpaper@2x.jpg 2x
+                        ./images/wallpaperph.jpg    1x,
+                        ./images/wallpaperph@2x.jpg 2x
                       "
                     />
                     <img
@@ -378,16 +378,16 @@
                 ><div class="about-icon-wrap">
                   <picture>
                     <source
-                      media="(min-width: 320px)"
-                      srcset="./images/girlph.jpg 1x, ./images/girlph@2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                      srcset="./images/girl.jpg 1x, ./images/girl@2x.jpg 2x"
                     />
                     <source
                       media="(min-width: 768px)"
                       srcset="./images/girltb.jpg 1x, ./images/girltb@2x.jpg 2x"
                     />
                     <source
-                      media="(min-width: 1200px)"
-                      srcset="./images/girl.jpg 1x, ./images/girl@2x.jpg 2x"
+                      media="(min-width: 320px)"
+                      srcset="./images/girlph.jpg 1x, ./images/girlph@2x.jpg 2x"
                     />
                     <img
                       src="./images/girl.jpg"
@@ -413,11 +413,8 @@
                 ><div class="about-icon-wrap">
                   <picture>
                     <source
-                      media="(min-width: 320px)"
-                      srcset="
-                        ./images/maketph.jpg    1x,
-                        ./images/maketph@2x.jpg 2x
-                      "
+                      media="(min-width: 1200px)"
+                      srcset="./images/maket.jpg 1x, ./images/maket@2x.jpg 2x"
                     />
                     <source
                       media="(min-width: 768px)"
@@ -427,8 +424,11 @@
                       "
                     />
                     <source
-                      media="(min-width: 1200px)"
-                      srcset="./images/maket.jpg 1x, ./images/maket@2x.jpg 2x"
+                      media="(min-width: 320px)"
+                      srcset="
+                        ./images/maketph.jpg    1x,
+                        ./images/maketph@2x.jpg 2x
+                      "
                     />
                     <img
                       src="./images/maket.jpg"
@@ -454,11 +454,8 @@
                 ><div class="about-icon-wrap">
                   <picture>
                     <source
-                      media="(min-width: 320px)"
-                      srcset="
-                        ./images/avoskaph.jpg    1x,
-                        ./images/avoskaph@2x.jpg 2x
-                      "
+                      media="(min-width: 1200px)"
+                      srcset="./images/avoska.jpg 1x, ./images/avoska@2x.jpg 2x"
                     />
                     <source
                       media="(min-width: 768px)"
@@ -469,7 +466,10 @@
                     />
                     <source
                       media="(min-width: 1200px)"
-                      srcset="./images/avoska.jpg 1x, ./images/avoska@2x.jpg 2x"
+                      srcset="
+                        ./images/avoskaph.jpg    1x,
+                        ./images/avoskaph@2x.jpg 2x
+                      "
                     />
                     <img
                       src="./images/avoska.jpg"
@@ -495,11 +495,8 @@
                 ><div class="about-icon-wrap">
                   <picture>
                     <source
-                      media="(min-width: 320px)"
-                      srcset="
-                        ./images/coffeph.jpg    1x,
-                        ./images/coffeph@2x.jpg 2x
-                      "
+                      media="(min-width: 1200px)"
+                      srcset="./images/coffe.jpg 1x, ./images/coffe@2x.jpg 2x"
                     />
                     <source
                       media="(min-width: 768px)"
@@ -509,8 +506,11 @@
                       "
                     />
                     <source
-                      media="(min-width: 1200px)"
-                      srcset="./images/coffe.jpg 1x, ./images/coffe@2x.jpg 2x"
+                      media="(min-width: 320px)"
+                      srcset="
+                        ./images/coffeph.jpg    1x,
+                        ./images/coffeph@2x.jpg 2x
+                      "
                     />
                     <img
                       src="./images/coffe.jpg"
