--- a/index.html
+++ b/index.html
@@ -202,31 +202,58 @@
           <h2 class="item-text">What are we doing</h2>
           <ul class="item-list list">
             <li class="item-pic">
-              <img
-                srcset="./images/rectangle1@2x.jpg 2x"
-                src="./images/rectangle1.jpg"
-                alt="Computer"
-                width="360"
-                height="300"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/rectangle1.webp    1x,
+                    ./images/rectangle1@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source srcset="./images/rectangle1@2x.jpg 2x" />
+                <img
+                  src="./images/rectangle1.jpg"
+                  alt="Computer"
+                  width="360"
+                  height="300"
+                />
+              </picture>
             </li>
             <li class="item-pic">
-              <img
-                srcset="./images/rectangle2@2x.jpg 2x"
-                src="./images/rectangle2.jpg"
-                alt="Social Network"
-                width="360"
-                height="300"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/rectangle2.webp    1x,
+                    ./images/rectangle2@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source srcset="./images/rectangle2@2x.jpg 2x" />
+                <img
+                  src="./images/rectangle2.jpg"
+                  alt="Social Network"
+                  width="360"
+                  height="300"
+                />
+              </picture>
             </li>
             <li class="item-pic">
-              <img
-                srcset="./images/rectangle3@2x.jpg 2x"
-                src="./images/rectangle3.jpg"
-                alt="Telephone"
-                width="360"
-                height="300"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/rectangle3.webp    1x,
+                    ./images/rectangle3@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source srcset="./images/rectangle3@2x.jpg 2x" />
+                <img
+                  src="./images/rectangle3.jpg"
+                  alt="Telephone"
+                  width="360"
+                  height="300"
+                />
+              </picture>
             </li>
           </ul>
         </div>
@@ -237,13 +264,23 @@
           <h2 class="command-caption">Our Team</h2>
           <ul class="comand-list list">
             <li class="comand-item">
-              <img
-                srcset="./images/markguerrero@2x.jpg 2x"
-                src="./images/markguerrero.jpg"
-                alt="Member of our team Mark Guerrero"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/markguerrero.webp    1x,
+                    ./images/markguerrero@2x.webp 2x
+                  "
+                  tupe="image/webp"
+                />
+                <source src="/images/markguerrero@2x.jpg 2x" />
+                <img
+                  srcset="./images/markguerrero@2x.jpg 2x"
+                  src="./images/markguerrero.jpg"
+                  alt="Member of our team Mark Guerrero"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="text-list">
                 <h3 class="command-pre-text">Mark Guerrero</h3>
                 <p class="command-text">Product Designer</p>
@@ -286,13 +323,19 @@
               </div>
             </li>
             <li class="comand-item">
-              <img
-                srcset="./images/tomford@2x.jpg 2x"
-                src="./images/tomford.jpg"
-                alt="Member of our team Tom Ford"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/tomford.webp 1x, ./images/tomford@2x.webp 2x"
+                  type="image/webp"
+                />
+                <source srcset="./images/tomford@2x.jpg 2x" />
+                <img
+                  src="./images/tomford.jpg"
+                  alt="Member of our team Tom Ford"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="text-list">
                 <h3 class="command-pre-text">Tom Ford</h3>
                 <p class="command-text">Frontend Developer</p>
@@ -335,13 +378,22 @@
               </div>
             </li>
             <li class="comand-item">
-              <img
-                srcset="./images/camilagarcia@2x.jpg 2x"
-                src="./images/camilagarcia.jpg"
-                alt="Member of our team Camila Garcia"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/camilagarcia.webp    1x,
+                    ./images/camilagarcia@2x.webp 2x
+                  "
+                  tupe="image/webp"
+                />
+                <source srcset="./images/camilagarcia@2x.jpg 2x" />
+                <img
+                  src="./images/camilagarcia.jpg"
+                  alt="Member of our team Camila Garcia"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="text-list">
                 <h3 class="command-pre-text">Camila Garcia</h3>
                 <p class="command-text">Marketing</p>
@@ -385,13 +437,22 @@
               </div>
             </li>
             <li class="comand-item">
-              <img
-                srcset="./images/danielwilson@2x.jpg 2x"
-                src="./images/danielwilson.jpg"
-                alt="Member of our team Daniel Wilson"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/danielwilson.webp    1x,
+                    ./images/danielwilson@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source srcset="./images/danielwilson@2x.jpg 2x" />
+                <img
+                  src="./images/danielwilson.jpg"
+                  alt="Member of our team Daniel Wilson"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="text-list">
                 <h3 class="command-pre-text">Daniel Wilson</h3>
                 <p class="command-text">UI Designer</p>
