--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
             >
           </li>
         </ul>
-      </div>
-      <div class="header-menu-wrap">
         <button type="button" class="header-btn-open" data-menu-open>
           <svg class="header-btn-icon-open" width="32" height="22">
             <use href="./images/symbol-defs.svg#icon-hamburger"></use>
           </svg>
         </button>
+      </div>
+      <div class="header-menu-wrap">
         <div class="header-wrap is-hidden" data-menu>
-          <div class="content">
+          <div class="container">
             <div class="mob-menu-top">
               <button type="button" class="header-btn-close" data-menu-close>
                 <svg class="header-btn-icon-close" width="8" height="8">
