--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,10 @@
           >
           <ul class="header list">
             <li class="header-item">
-              <a class="header-link link" href="./index.html">Studio</a>
+              <a class="header-link link current" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="header-link link current" href="./portfolio.html"
-                >Portfolio</a
-              >
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="header-item">
               <a class="header-link link" href="">Contacts</a>
@@ -53,13 +51,13 @@
             >
           </li>
         </ul>
-      </div>
-      <div class="header-menu-wrap">
         <button type="button" class="header-btn-open" data-menu-open>
           <svg class="header-btn-icon-open" width="32" height="22">
             <use href="./images/symbol-defs.svg#icon-hamburger"></use>
           </svg>
         </button>
+      </div>
+      <div class="header-menu-wrap">
         <div class="header-wrap is-hidden" data-menu>
           <div class="container">
             <div class="mob-menu-top">
@@ -70,14 +68,12 @@
               </button>
               <ul class="header-wrap-list list">
                 <li class="header-wrap-item">
-                  <a class="header-wrap-link link" href="./index.html"
+                  <a class="header-wrap-link link current" href="./index.html"
                     >Studio</a
                   >
                 </li>
                 <li class="header-wrap-item">
-                  <a
-                    class="header-wrap-link link current"
-                    href="./portfolio.html"
+                  <a class="header-wrap-link link" href="./portfolio.html"
                     >Portfolio</a
                   >
                 </li>
