--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,12 @@
           >
           <ul class="header list">
             <li class="header-item">
-              <a class="header-link link current" href="./index.html">Studio</a>
+              <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+              <a class="header-link link current" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="header-item">
               <a class="header-link link" href="">Contacts</a>
@@ -68,12 +70,14 @@
               </button>
               <ul class="header-wrap-list list">
                 <li class="header-wrap-item">
-                  <a class="header-wrap-link link current" href="./index.html"
+                  <a class="header-wrap-link link" href="./index.html"
                     >Studio</a
                   >
                 </li>
                 <li class="header-wrap-item">
-                  <a class="header-wrap-link link" href="./portfolio.html"
+                  <a
+                    class="header-wrap-link link current"
+                    href="./portfolio.html"
                     >Portfolio</a
                   >
                 </li>
